--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,4 @@
 {% extends 'structure.html' %}
 {% block head %}
-  {% block title %}
-  {% endblock title %}
+  <title>{% block title %}{% endblock title %}</title>
 {% endblock head %}
