--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,9 @@
 {% extends 'base.html' %}
 {% block title %}Hello world{% endblock title %}
 {% block body %}
+    <div class="container" ui-view></div>
 
-{% if current_user.is_authenticated() %}
-  <li>Hello {{ current_user.email }}</li>
-  <li><a href="{{ url_for('security.logout') }}">Logout</a></li>
-{% else %}
-  <li><a href="{{ url_for('security.login') }}">Login</a></li>
-  <li><a href="{{ url_for('security.register') }}">Register</a></li>
-{% endif %}
-</ul>
 
 {% endblock body %}
+
+
