--- a/templates/structure.html
+++ b/templates/structure.html
@@ -1,10 +1,51 @@
 <html>
-  <head>
-    {% block head %}
-    {% endblock head %}
-  </head>
   <body>
+
+  </body>
+</html>
+
+
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width">
+    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+	<!-- build:css(.tmp) styles/main.css -->
+	<link rel="stylesheet" href="{{ url_for('static', filename='styles/main.css') }}">
+	<!-- endbuild -->
+   {% block head %}
+   {% endblock head %}
+</head>
+  <body ng-app="app">
+    <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    <!--[if lt IE 9]>
+      <script src="bower_components/es5-shim/es5-shim.js"></script>
+      <script src="bower_components/json3/lib/json3.min.js"></script>
+    <![endif]-->
+
+    <!-- Add your site or application content here -->
     {% block body %}
     {% endblock body %}
-  </body>
+
+    <script src="{{ url_for('static', filename='vendor/angular.js') }} "></script>
+    <script src="{{ url_for('static', filename='vendor/keypress.js') }} "></script>
+    <script src="{{ url_for('static', filename='vendor/angular-resource.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/angular-ui-router.js') }}"></script>
+    <script src="{{ url_for('static', filename='scripts/app.js') }} "></script>
+    <script src="{{ url_for('static', filename='scripts/guy.js') }} "></script>
+    <script src="{{ url_for('static', filename='scripts/engine.js') }} "></script>
+    <script src="{{ url_for('static', filename='scripts/video.js') }} "></script>
+
+
+</body>
 </html>
