--- a/templates/structure.html
+++ b/templates/structure.html
@@ -37,7 +37,8 @@
     {% block body %}
     {% endblock body %}
 
-    <script src="{{ url_for('static', filename='vendor/angular.js') }} "></script>
+    <script src="{{ url_for('static', filename='vendor/angular.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/underscore-min.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/keypress.js') }} "></script>
     <script src="{{ url_for('static', filename='vendor/angular-resource.js') }}"></script>
     <script src="{{ url_for('static', filename='vendor/angular-ui-router.js') }}"></script>
@@ -45,6 +46,8 @@
     <script src="{{ url_for('static', filename='scripts/guy.js') }} "></script>
     <script src="{{ url_for('static', filename='scripts/engine.js') }} "></script>
     <script src="{{ url_for('static', filename='scripts/video.js') }} "></script>
+    <script src="{{ url_for('static', filename='scripts/rtc.js') }} "></script>
+    <script src="{{ url_for('static', filename='scripts/background.js') }} "></script>
 
 
 </body>
